--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "openai": "^4.0.0"
   }
 }
